--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -96,9 +96,11 @@
                                 Java,<br>  
                                 HTML/CSS/JS,<br>  
                                 R, <br>
+                                Matlab, <br>
                                 Heroku,<br>
-                                YOLO <br> 
+                                YOLO, <br> 
                                 Tensorflow,<br>
+                                OpenCV,<br>  
                                 nextcord,<br>   
                                 MongoDB,<br>  
                                 Latex, <br>
@@ -108,7 +110,6 @@
                                 Autodesk Fusion 360 <br>
                                 SQL,<br>  
                                 Rocket, <br>
-                                OpenCV,<br>  
                                 numpy, <br>
                                 Pandas, <br>
                                 Limelight, <br>  
