--- a/flaskApp/templates/exercise.html
+++ b/flaskApp/templates/exercise.html
@@ -66,22 +66,15 @@
             </div>
             <div class="exercisecard">
                 <h3>
-                    <span class="function">shoulders</span>()
+                    <span class="function">shoulders</span>()<span class="red">+</span> <span class="function">chest</span>()<span class="red">+</span> <span class="function">tri</span>()
                 </h3>
                 <p>
                     80x elevated pike press <br>
                     4x12 Arnold press <br>
                     4x12 Side lat raises <br>
-                </p>
-            </div>
-            <div class="exercisecard">
-                <h3>
-                    <span class="function">chest</span>() <span class="red">+</span> <span class="function">tri</span>()
-                </h3>
-                <p>
-                    5x20 archer pushups <br>
+                    4x20 archer pushups <br>
                     4x8 bench press <br>
-                    4x16 bar tricep extensions <br>
+                    4x12 bar tricep extensions <br>
                 </p>
             </div>
             <div class="exercisecard">
@@ -99,7 +92,6 @@
                     <span class="function">everyday</span>()
                 </h3>
                 <p>
-                    100x pushups <br>
                     4x40seconds russian twists <br>
                     stretching
                 </p>
