--- a/flaskApp/templates/exercise.html
+++ b/flaskApp/templates/exercise.html
@@ -59,7 +59,8 @@
                 <p>
                     4x12 hybrid curl  + stretch between sets<br>
                     4x12 french curl<br>
-                    6x10 L sit pullups <br>
+                    3x10 L sit pullups <br>
+                    3x6 weighted pullups <br>
                     4x12 bent over rows <br>
                     4x10 seated rows WITH STRETCH <br>
                 </p>
