--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -146,7 +146,7 @@
                                 <a href="https://www.pycalc.com/website/" target="_blank">@Pycalc X</a><br>
                                 2021 - 2022 <br><br>  
    
-                                <span>Datascience project + Contributor</span> <br>
+                                <span>Contributor</span> <br>
                                 <a href="https://codebozu.com" target="_blank">@CodeBozu</a><br>
                                 2021 <br><br>
 
@@ -182,7 +182,7 @@
                         <p>
                             <span class="quoteHead">me.<span class="function">Quote</span>()</span> <br><br>
                             &nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteText">"Be kind."</span><br>
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteFoot">-Gene, 2023</span>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteFoot">-Geneustace Wicaksono, 2023</span>
                         </p>
                     </div>
                 </div>
