--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -58,8 +58,8 @@
                         <h1>
                             me.<span class="function">About</span>()
                         </h1>
-                        <p>"""I started my CS journey during the February of 2021, mainly working on computer vision, web applications, discord bots, machine learning, and game addons.
-                            On this journey, I have worked on several projects and have had valuable experience collaborating with fellow developers."""
+                        <p>"""Im from Jakarta, but am based in Ithaca NY. I started my CS journey during the February of 2021, mainly working on computer vision, web applications, discord bots, machine learning, and game addons.
+                            Im good at working with people. Trust. I enjoy lifting, and want to do a combat sport in college."""
                         </p> 
                         <a href="https://github.com/SentientPlatypus" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
                         <a href="https://stackoverflow.com/users/19341357/sentient-platypus" target="_blank"><i class="fa-brands fa-stack-overflow fa-2x socialsIcon"></i></a>
