changed foresight image

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -554,7 +554,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="{{ url_for('static',filename='images/ForesightLogo.png') }}" alt="Foresight " class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/foresight.png') }}" alt="Foresight " class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
