changed images for some work items

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -702,7 +702,7 @@
                         </div>
                     </div>
                     <div class="ProjectItem" id="LivesSMP" onclick="openThePopup('LivesSMP')">
-                        <img src="https://ih1.redbubble.net/image.927840418.5711/pp,840x830-pad,1000x1000,f8f8f8.jpg" alt="Lives SMP">
+                        <img src="{{ url_for('static',filename='images/smpGUI.png') }}" alt="Lives SMP">
                         <h3>
                             Lives SMP
                         </h3>
@@ -711,7 +711,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="https://ih1.redbubble.net/image.927840418.5711/pp,840x830-pad,1000x1000,f8f8f8.jpg" alt="CODE RED" class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/smpGUI.png') }}" alt="CODE RED" class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
@@ -1005,7 +1005,7 @@
                         </div>                  
                     </div>
                     <div class="ProjectItem" id="PresidentResearchProject" onclick="openThePopup('PresidentResearchProject')">
-                        <img src="https://cdn.cnn.com/cnnnext/dam/assets/181105112842-donkey-elephant-top-full-169.jpg" alt="Politician Scraping">
+                        <img src="{{ url_for('static',filename='images/presidents.png') }}" alt="Politician Scraping">
                         <h3>
                             Politician Scraping
                         </h3>
@@ -1014,7 +1014,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="https://cdn.cnn.com/cnnnext/dam/assets/181105112842-donkey-elephant-top-full-169.jpg" alt="CODE RED" class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/presidents.png') }}" alt="CODE RED" class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
