changed image for puzzles

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -967,7 +967,7 @@
                         </div>
                     </div>
                     <div class="ProjectItem" id="puzzles" onclick="openThePopup('puzzles')">
-                        <img src="https://hips.hearstapps.com/amv-prod-gp.s3.amazonaws.com/gearpatrol/wp-content/uploads/2020/04/How-To-Get-Better-At-Puzzles-gear-patrol-lead-feature-V2.jpg" alt="puzzles">
+                        <img src="{{ url_for('static',filename='images/puzzles.png') }}" alt="puzzles">
                         <h3>
                             Puzzles
                         </h3>
@@ -976,7 +976,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="https://hips.hearstapps.com/amv-prod-gp.s3.amazonaws.com/gearpatrol/wp-content/uploads/2020/04/How-To-Get-Better-At-Puzzles-gear-patrol-lead-feature-V2.jpg" alt="CODE RED" class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/puzzles.png') }}" alt="CODE RED" class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
