--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -35,7 +35,7 @@
                 <p>
                     <span class="let">let</span> <span class="red">mut</span> me <span class="red">=</span> <span class="function">Dev</span>{<br>
                     &nbsp;&nbsp;&nbsp;&nbsp;<span class = "param">name</span> : <span class="function">String</span>::<span class="function">from</span>(<span class = "str">“Gene”</span>), <br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;<span class = "param">age</span> : <span class="int">16</span>, <br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;<span class = "param">age</span> : <span class="int">17</span>, <br>
             };
                 </p>
             </div>
@@ -125,6 +125,10 @@
                                 Experience
                             </h3>
                             <p>
+
+                                <span>Intern -> Volunteer</span> <br>
+                                <a href="https://www.verifiablerobotics.com" target="_blank">@Cornell Autonomous Systems Lab</a><br>
+                                2023<br><br>  
 
                                 <span>Intern</span> <br>
                                 <a href="https://www.lockheedmartin.com" target="_blank">@Lockheed Martin</a><br>
