--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -315,8 +315,11 @@
                                 <p>
                                     I was playing rocket league one day. "dang these cars are cool, what if I made one?" So I sat down my boys and pitched the idea. I proposed some ideas for the jumping, and propulsion, and we had a good discussion. This is going to work. We will make a toy rocket league car that can jump, and do aerials.
 
-                                    There are 4 subsystems on the robot we needed to tackle
+                                    There are 4 subsystems on the robot we needed to tackle. Each runs on their own thread. 
                                     
+                                    **Controller input**
+                                    Just constant update of buttons and axes
+
                                     **Engine**
                                     This is the easiest part. Slap a dc motor onto the back wheels.
                                     
