--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -58,8 +58,8 @@
                         <h1>
                             me.<span class="function">About</span>()
                         </h1>
-                        <p>"""Im from Jakarta, but am based in Ithaca NY. I started my CS journey during the February of 2021, mainly working on computer vision, web applications, discord bots, machine learning, and game addons.
-                            Im good at working with people. Trust. I enjoy lifting, and want to do a combat sport in college."""
+                        <p>"""Im from Jakarta, but I lived most of my life in Ithaca NY. I moved back for a family thing, but I hope to stay in the States! Be it teaching me or working side by side, all the worthwhile things I do have been influenced by amazing people. If you have a good idea and need some people to run with it; or just want to gym, hoop or grapple; contact me! I hope to spread the love, and maybe learn something new in the process.
+                            """
                         </p> 
                         <a href="https://github.com/SentientPlatypus" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
                         <a href="https://stackoverflow.com/users/19341357/sentient-platypus" target="_blank"><i class="fa-brands fa-stack-overflow fa-2x socialsIcon"></i></a>
@@ -137,13 +137,13 @@
                                 <span>Founder</span> <br>
                                 <a href="https://resonancewebsite.herokuapp.com/" target="_blank">@Resonance</a><br>
                                 2022 - now <br><br>  
-
+ 
                                 <span>President</span> <br>
                                 <a href="https://sites.google.com/view/ithacastemadvocates/associates#h.p6aqjxpg6ygg" target="_blank">@IHS Dev team</a><br>
                                 2022 - now <br><br> 
                                 
                                 <span>Computer visions head</span> <br>
-                                <a href="https://team639.org" target="_blank">@Code Red</a><br>
+                                <a href="https://team639.org" target="_blank">@Code Red Robotics</a><br>
                                 2022 - now <br><br> 
 
                                 <span>Webapp developer + Cofounder</span> <br>
@@ -1288,6 +1288,10 @@
         </div>
 
         <div class="cursors">
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
             <div><span></span></div>
             <div><span></span></div>
             <div><span></span></div>
