--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -93,6 +93,7 @@
                             <p>
                                 Python,<br>  
                                 Rust, <br>
+                                C++, <br>
                                 Java,<br>  
                                 HTML/CSS/JS,<br>  
                                 R, <br>
@@ -1049,9 +1050,19 @@
                             <div class="popupContent">
                                 <p>
                                     Amoris was a discord bot that had an absolute truckload of features. It was my very first project in python. So everything new that I learned, would have some implementation in Amoris.
+                                    Each of the systems in Amoris was interconnected. 
+                                    You want to play minecraft with your virtual friend? You need to buy a pc and minecraft from the shop first. 
+                                    And make sure your PC meets the specs minecraft has. You need money? Get a job! 
+                                    Job application rejected? Get some xp first. Or, if you want secondary income, you can fish, mine or hunt (make sure you buy the correct tools to do so). Want to get better loot? Craft better tools. 
+                                    Someone is trying to rob you? Defend yourself! 
+                                    Got beaten, upgrade your stats by levelling up! Use your money to buy weapons and items that have different abilities and ultimates. 
+                                    I even made a webapp that you can change personal settings from!
+
+
+
+
                                     Amoris' main feature was the.. well.. lets call it the "friend simulator" This simulator allows you to customize everything about your buddy. Images, personality, etc. The cool thing is, 
-                                    The experiences with your friend would be saved, and their responses would update as well. This is thanks to GPT-3, an incredibly advanced NLP engine.
-                                    Ok. 
+                                    The experiences with your friend are saved, and their responses update as well. Its like talking to a real person. This is thanks to GPT-3, an incredibly advanced NLP engine.
                                     
                                      <br>
 
