--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -77,6 +77,7 @@
                                 Computer Visions,<br> 
                                 Machine Learning, <br>
                                 webscraping, <br>
+                                Electronics <br>
                                 CAD,<br>
                                 Data analysis,<br>  
                                 Discord Bots,<br>  
@@ -217,7 +218,7 @@
                 <div class="Projects">
 
                     <div class="ProjectItem" id="fktxt" onclick="openThePopup('fktxt')">
-                        <img src="{{ url_for('static',filename='images/maindemo.png') }}" alt="Lives SMP">
+                        <img src="{{ url_for('static',filename='images/ftxt.png') }}" alt="Lives SMP">
                         <h3>
                             FKTXT
                         </h3>
@@ -226,7 +227,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="{{ url_for('static',filename='images/maindemo.png') }}" alt="Octane7" class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/ftxt.png') }}" alt="Octane7" class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
@@ -348,8 +349,6 @@
                             </div>
                         </div>        
                     </div>
-
-
                     <div class="ProjectItem" id="cty" onclick="openThePopup('cty')">
                         <img src="https://i.ytimg.com/vi/XoZz8ZJRpaU/hqdefault.jpg?sqp=-oaymwEXCOADEI4CSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLDdi2EDlwFB1D84LqAiupU-8kdFUg" alt="Lives SMP">
                         <h3>
@@ -464,7 +463,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="{{ url_for('static',filename='images/tyrannosaurusred.png') }}" alt="CODE RED" class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/apriltags.png') }}" alt="CODE RED" class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
