fixed jackal image

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -216,8 +216,10 @@
                     </p> 
                 </div>
                 <div class="Projects">
+
+
                     <div class="ProjectItem" id="jackal" onclick="openThePopup('jackal')">
-                        <img src="{{ url_for('static',filename='images/jackal.HEIC') }}" alt="Lives SMP">
+                        <img src="{{ url_for('static',filename='images/jackal.png') }}" alt="Lives SMP">
                         <h3>
                             Cornell ASL Jackal
                         </h3>
@@ -226,7 +228,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="{{ url_for('static',filename='images/jackal.HEIC') }}" alt="Octane7" class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/jackal.png') }}" alt="Octane7" class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
@@ -257,8 +259,8 @@ Additionally, I also quick fixes to the robot code such as inverting the output 
                                     Links:
                                 </h3>
                                 <div class="links">
-                                    <a href="https://FKTXT.godaddysites.com" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
-                                    <a href="https://github.com/FKTXT/FKTXT" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
+                                    <a href="https://dl.acm.org/doi/abs/10.1145/3568162.3576955" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
+                                    <a href="https://github.com/SentientPlatypus/jackal" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
                                 </div>
                             </div>
                         </div>        
