love what I do.

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -49,7 +49,7 @@
                     Persistence
                 </p>
                 <p class="valueText">
-                    Its about drive.
+                    I love what I do.
                 </p>
             </div>
             <div class="AboutMe" id="AboutMe">
