updated exercise page

--- a/flaskApp/templates/exercise.html
+++ b/flaskApp/templates/exercise.html
@@ -73,7 +73,7 @@
                     80x elevated pike press <br>
                     4x12 Arnold press <br>
                     4x12 Side lat raises <br>
-                    4x20 archer pushups <br>
+                    4x10 One arm push-ups <br>
                     4x8 bench press <br>
                     4x12 bar tricep extensions <br>
                 </p>
@@ -83,9 +83,10 @@
                     <span class="function">legs</span>()
                 </h3>
                 <p>
-                    4x8 pistol squats each leg <br>
+                    3x10 squat or pistol squat <br>
+                    3x10 leg extensions <br>
                     100x calf raises <br>
-                    4x8 nordic hamstring curl <br>
+                    4x15 lunge jumps
                 </p>
             </div>
             <div class="exercisecard">
